--- a/src/main/resources/templates/verification/checked.html
+++ b/src/main/resources/templates/verification/checked.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>[큐알로] 인증완료</title>
 </head>
 <body>
 <h1>
-  Thank you!
+  [큐알로] 인증이 완료되었습니다.
 </h1>
 
 <p>
-  We have successfully verified your account. <br/>
-  Please go back to your account!
+  인증이 완료되었습니다! <br/>
+  이제 계정을 이용하실 수 있습니다.<br/>
+  갑사합니다!
 </p>
-
+<br/>
+감사합니다.
+<br/>
+큐알로 드림.
 </body>
 </html>
