QRLO-25: Business card | Verification email through company email address

--- a/src/main/resources/templates/mail/html/verification/businesscard.html
+++ b/src/main/resources/templates/mail/html/verification/businesscard.html
@@ -9,11 +9,11 @@
 <h1>[큐알로] 비즈니스 명함 이메일 계정 연동 인증</h1>
 
 <p>
-    안녕하세요, <span th:text="${userLastName}"/><span th:text="${userFirstName}"/>님.
-    큐알로 입니다.
-
-    비즈니스 정보 이메일 인증을 완료하시려면 하단 버튼을 눌러주세요!
-    인증절차는 선택사항이며 인증을 하시지 않아도 정상적으로 서비스를 이용하실 수 있습니다.
+    안녕하세요, <span th:text="${userLastName}"/><span th:text="${userFirstName}"/>님.<br/>
+    큐알로 입니다.<br/>
+    <br/>
+    비즈니스 정보 이메일 인증을 완료하시려면 하단 버튼을 눌러주세요!<br/>
+    인증절차는 선택사항이며 인증을 하시지 않아도 정상적으로 서비스를 이용하실 수 있습니다.<br/>
 </p>
 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
     <tr>
